--- a/README
+++ b/README
@@ -1,34 +1,19 @@
-st - simple terminal
---------------------
-st is a simple terminal emulator for X which sucks less.
+# Dotfiles
+
+![](/rice.png)
+
+##### This is my personal collection of dotfiles for my Dell XPS 15 9570 running Bedrock Linux.
+
+I've been searching for a distro for what seems like forever now, but I finally feel like I've found a setup that perfectly fits both my needs _and_ my preferences. Before I turned this into a Bedrock system, it was running Void linux (musl), which, while I personally loved, it was challenging or outright impossible to run certain software that I either needed for university, or wanted personally. This repository contains both my dotfiles, and my opinions on Bedrock Linux.  Mainly, why I believe it is a great fit for myself, and possibly for others who have a hard time completely agreeing with the philosophies and standards of an individual distribution of Linux/Unix.
 
 
-Requirements
-------------
-In order to build st you need the Xlib header files.
+##### Here is some info about my setup:
 
 
-Installation
-------------
-Edit config.mk to match your local setup (st is installed into
-the /usr/local namespace by default).
-
-Afterwards enter the following command to build and install st (if
-necessary as root):
-
-    make clean install
-
-
-Running st
-----------
-If you did not install st with make clean install, you must compile
-the st terminfo entry with the following command:
-
-    tic -sx st.info
-
-See the man page for additional details.
-
-Credits
--------
-Based on Aurélien APTEL <aurelien dot aptel at gmail dot com> bt source code.
-
++ **OS**: [Bedrock Linux](http://bedrocklinux.org/) --> [more details below](#bedrock-linux)
++ **WM**: [DWM](https://dwm.suckless.org/)
++ **Terminal**: [st](https://st.suckless.org/)
++ **Font**: [Input Mono Condensed](https://input.fontbureau.com/)
++ **Icons in bar**: [Font Awesome 4](https://fontawesome.com/v4.7.0/icons/)
++ **Color Scheme**: [Kasugano from terminal.sexy](https://terminal.sexy)
++ **Compositor**: [picom fork with dual_kawase blur and rounded corners](https://www.reddit.com/r/unixporn/comments/fs8trg/oc_comptonpicom_fork_with_both_tryone144s_dual/)
